--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,19 @@
 		</div>
 	</div>
 	<div id="screenshot" class="screenshot">
-         <img id="img" width="300" height="200" src="" alt="screenshot">
+         <img id="img" width="300" height="200" src="" alt="请开始截图">
+	</div>
+	<div class="operation">
+		<div class="clear" id="clear">
+			<p>清空截图</p>
+		</div>
+		<div class="undo" id="undo">
+			<p>取消当前截图</p>
+		</div>
 	</div>
 	<div class="ocr-area">
 		<div class="ocr" id="ocr">
-			<p>识别当前页面中文字</p>
+			<p id="cut-num">识别当前视频中文字</p>
 		</div>
 		<label>
 			<textarea class="textarea" id="textarea" rows="10" cols="30">我是一个文本框。</textarea>
